# eigen

./: .clang-format  .clang-tidy  .coderabbit.yaml  .codespellrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING.README  CTestConfig.cmake  INSTALL  PLAN.md  RELEASING.md  REUSE.toml  changelog.md  perf.data  pr.md  setup.cfg  test_mm_set_sh.cpp
bench/: BenchTimer.h  CMakeLists.txt  analyze-blocking-sizes.cpp  benchFFT.cpp  benchSelect.cpp  bench_move_semantics.cpp  bench_sme.cpp  benchmark-blocking-sizes.cpp  benchmark_aocl.cpp  eig33.cpp  run_comparison.sh  sparse_trisolver.cpp
bench/spbench/: CMakeLists.txt  sp_solver.cpp  spbenchsolver.h  spbenchstyle.h
bench/tensors/: README  eigen_sycl_bench_contract.sh  tensor_benchmarks.h  tensor_contract_sycl_bench.cc
contrib/Eigen/: AdolcForward  AlignedVector3  ArpackSupport  AutoDiff  BVH  CMakeLists.txt  EulerAngles  FFT  GPU  IterativeSolvers  KroneckerProduct  LevenbergMarquardt  MPRealSupport  MatrixFunctions  NNLS  NonLinearOptimization  NumericalDiff  OpenGLSupport  Polynomials  SparseExtra  SpecialFunctions  Splines  Tensor  TensorSymmetry
test/: AnnoyingScalar.h  CMakeLists.txt  CustomComplex.h  MovableScalar.h  OffByOneScalar.h  SafeScalar.h  TrickyInteger.h  accelerate_support.cpp  adjoint.cpp  allocator.cpp  allocator_cpp17.cpp  array_cwise.cpp  array_cwise_helpers.h  array_for_matrix.cpp  array_of_string.cpp  array_replicate.cpp  array_reverse.cpp  assignment_operators.cpp  assignment_threaded.cpp  bandmatrix.cpp  basicstuff.cpp  bdcsvd.cpp  bfloat16_float.cpp  bicgstab.cpp  blasutil.cpp  block.cpp  boostmultiprec.cpp  bug1213.cpp  bug1213.h  bug1213_main.cpp  bunchkaufman.cpp  cholesky.cpp  cholmod_support.cpp  clz.cpp  commainitializer.cpp  compile_time_evaluation.cpp  complex_qz.cpp  concat.cpp  conjugate_gradient.cpp  conservative_resize.cpp  (+193 more)
test/Cholesky/: CMakeLists.txt  cholesky.cpp  cholesky_blocking.cpp  cholesky_blocking.h  cholesky_blocking_complex.cpp  cholesky_complex.cpp  cholesky_helpers.h  nomalloc.cpp
test/Core/: CMakeLists.txt  adjoint.cpp  array_cwise_bitwise.cpp  array_cwise_cast.cpp  array_cwise_cast_dynamic.cpp  array_cwise_complex.cpp  array_cwise_math.cpp  array_cwise_operations.cpp  array_cwise_operations_int.cpp  array_cwise_real.cpp  array_cwise_real_lowprec.cpp  array_for_matrix.cpp  array_of_string.cpp  array_replicate.cpp  array_reverse.cpp  bandmatrix.cpp  basicstuff.cpp  block_basic.cpp  block_basic_dynamic.cpp  block_extra.cpp  block_helpers.h  boostmultiprec_cholesky.cpp  boostmultiprec_helpers.h  boostmultiprec_lu_qr.cpp  boostmultiprec_svd.cpp  bug1213.cpp  clz.cpp  commainitializer.cpp  concat.cpp  conservative_resize.cpp  constexpr.cpp  constructor.cpp  corners.cpp  ctorleak.cpp  dense_storage.cpp  diagonal.cpp  diagonal_matrix_variadic_ctor.cpp  diagonalmatrices.cpp  diagonalview.cpp  dontalign.cpp  (+84 more)
test/Eigenvalues/: CMakeLists.txt  complex_qz.cpp  eigensolver_complex.cpp  eigensolver_complex.h  eigensolver_complex_extra.cpp  eigensolver_generalized_real.cpp  eigensolver_generic.cpp  eigensolver_generic.h  eigensolver_generic_extra.cpp  eigensolver_selfadjoint_3x3_4x4.cpp  eigensolver_selfadjoint_3x3_4x4_complex.cpp  eigensolver_selfadjoint_dynamic.cpp  eigensolver_selfadjoint_dynamic_complex.cpp  eigensolver_selfadjoint_fixed.cpp  eigensolver_selfadjoint_fixed_complex.cpp  eigensolver_selfadjoint_fixed_float.cpp  eigensolver_selfadjoint_helpers.h  hessenberg.cpp  real_qz.cpp  schur_complex.cpp  schur_real.cpp
test/GPU/: CMakeLists.txt  gpu_basic.cu  gpu_example.cu
test/Geometry/: CMakeLists.txt  geo_alignedbox.cpp  geo_eulerangles.cpp  geo_homogeneous.cpp  geo_hyperplane.cpp  geo_misc.cpp  geo_orthomethods.cpp  geo_parametrizedline.cpp  geo_quaternion.cpp  geo_transformations.cpp  geo_transformations_helpers.h  geo_transformations_projective.cpp  geo_transformations_projective_misc.cpp  umeyama.cpp
test/IterativeLinearSolvers/: CMakeLists.txt  bicgstab.cpp  conjugate_gradient.cpp  incomplete_LUT.cpp  incomplete_cholesky.cpp  lscg.cpp
test/LU/: CMakeLists.txt  condition_estimator.cpp  condition_estimator.h  condition_estimator_complex.cpp  determinant.cpp  inplace_decomposition.cpp  inverse.cpp  inverse.h  inverse_complex.cpp  lu.cpp  lu_blocking.cpp  lu_blocking.h  lu_blocking_complex.cpp  lu_complex.cpp  lu_double.cpp  lu_helpers.h  lu_real.cpp
test/QR/: CMakeLists.txt  householder.cpp  householder.h  householder_complex.cpp  householder_dynamic.cpp  householder_fixed.cpp  householder_float.cpp  householder_helpers.h  qr.cpp  qr.h  qr_cod.cpp  qr_cod.h  qr_cod_complex.cpp  qr_cod_fixed.cpp  qr_cod_float.cpp  qr_colpivoting.cpp  qr_colpivoting_complex.cpp  qr_colpivoting_double.cpp  qr_colpivoting_helpers.h  qr_complex.cpp  qr_fullpivoting.cpp  qr_fullpivoting.h  qr_fullpivoting_complex.cpp
test/SVD/: CMakeLists.txt  bdcsvd_assert.cpp  bdcsvd_assert_complex.cpp  bdcsvd_assert_rect.cpp  bdcsvd_compare.cpp  bdcsvd_compare_complex.cpp  bdcsvd_double_colmajor.cpp  bdcsvd_double_rowmajor.cpp  bdcsvd_double_rowmajor_rect.cpp  bdcsvd_double_semi.cpp  bdcsvd_double_semi_full.cpp  bdcsvd_double_semi_wide.cpp  bdcsvd_float_dynamic.cpp  bdcsvd_float_dynamic_full.cpp  bdcsvd_float_fixed.cpp  bdcsvd_float_fixed_full.cpp  bdcsvd_float_fixed_rect.cpp  bdcsvd_float_fixed_rect_full.cpp  bdcsvd_float_fixed_rect_thin2.cpp  bdcsvd_float_fixed_rect_thin3.cpp  bdcsvd_float_fixed_thin2.cpp  bdcsvd_float_fixed_thin3.cpp  bdcsvd_helpers.h  bdcsvd_trivial.cpp  bdcsvd_trivial_2d.cpp  bdcsvd_trivial_complex.cpp  jacobi.cpp  jacobisvd_complex.cpp  jacobisvd_double_dynamic.cpp  jacobisvd_double_dynamic_partial.cpp  jacobisvd_double_dynamic_partial_full.cpp  jacobisvd_double_dynamic_partial_wide.cpp  jacobisvd_double_fixed.cpp  jacobisvd_double_fixed_rect.cpp  jacobisvd_double_fixed_rect_tall.cpp  jacobisvd_double_rowmajor.cpp  jacobisvd_double_rowmajor_5x7.cpp  jacobisvd_double_rowmajor_7x5.cpp  jacobisvd_double_rowmajor_full.cpp  jacobisvd_double_rowmajor_wide.cpp  (+25 more)
unsupported/: CMakeLists.txt
(+4108 files in other folders)
